// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form checkbox component Should render correctly 1`] = `
<div
  className="form-group"
>
  <label
    className="control-label col-xs-2"
  >
    foo
  </label>
  <div
    className="col-xs-8"
  >
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="checkbox"
          value=""
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Final form checkbox component Should render with error message 1`] = `
<div
  className="form-group has-error"
>
  <label
    className="control-label col-xs-2"
  >
    foo
  </label>
  <div
    className="col-xs-8"
  >
    <div
      className="checkbox"
      style={undefined}
    >
      <label
        title=""
      >
        <input
          disabled={false}
          name="name"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          onFocus={[MockFunction]}
          type="checkbox"
          value=""
        />
      </label>
    </div>
    <span
      className="help-block"
    >
      Error message
    </span>
  </div>
</div>
`;
